[gd_scene load_steps=18 format=3 uid="uid://b7x1st8766bcw"]

[ext_resource type="Script" path="res://mobs/Castor_mitraillette/Castor_mitraillette.gd" id="1_38nya"]
[ext_resource type="Texture2D" uid="uid://dbgmb4osnfg6o" path="res://mobs/Castor_mitraillette/castor_depolux.jpg" id="1_mrymo"]
[ext_resource type="Texture2D" uid="uid://xiifa2d4b3j6" path="res://mobs/Castor_mitraillette/animation/attack/lancer_de_tronc_V4.png" id="2_0r7yq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cbto7"]
atlas = ExtResource("2_0r7yq")
region = Rect2(0, 0, 676, 472)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk34e"]
atlas = ExtResource("2_0r7yq")
region = Rect2(676, 0, 676, 472)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkmd3"]
atlas = ExtResource("2_0r7yq")
region = Rect2(1352, 0, 676, 472)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhhn1"]
atlas = ExtResource("2_0r7yq")
region = Rect2(2028, 0, 676, 472)

[sub_resource type="AtlasTexture" id="AtlasTexture_28r2w"]
atlas = ExtResource("2_0r7yq")
region = Rect2(2704, 0, 676, 472)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sx2p"]
atlas = ExtResource("2_0r7yq")
region = Rect2(3380, 0, 676, 472)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrsp3"]
atlas = ExtResource("2_0r7yq")
region = Rect2(4056, 0, 676, 472)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g3ey"]
atlas = ExtResource("2_0r7yq")
region = Rect2(4732, 0, 676, 472)

[sub_resource type="SpriteFrames" id="SpriteFrames_j3wsb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbto7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk34e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkmd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhhn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28r2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sx2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrsp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g3ey")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_mrymo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yexg8"]
radius = 320.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcnb7"]
size = Vector2(22, 30)

[sub_resource type="Animation" id="Animation_ulr17"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_skt8n"]
resource_name = "attack"
length = 0.90001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6, 7, 7, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hknjn"]
_data = {
"RESET": SubResource("Animation_ulr17"),
"attack": SubResource("Animation_skt8n")
}

[node name="CastorMitrailette" type="CharacterBody2D" groups=["Castor_mitraillette"]]
script = ExtResource("1_38nya")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4.76837e-07, -9.53674e-07)
scale = Vector2(0.0769231, 0.0987654)
sprite_frames = SubResource("SpriteFrames_j3wsb")
animation = &"attack"
autoplay = "default"
frame_progress = 0.856618

[node name="DetectionAreaPlayer" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionAreaPlayer"]
shape = SubResource("CircleShape2D_yexg8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, 4)
shape = SubResource("RectangleShape2D_tcnb7")

[node name="ProjectileTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Reloading" type="Timer" parent="."]
one_shot = true

[node name="Direction" type="Timer" parent="."]
wait_time = 1.5

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_0r7yq")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hknjn")
}

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionAreaPlayer" to="." method="_on_detection_area_player_body_entered"]
[connection signal="body_exited" from="DetectionAreaPlayer" to="." method="_on_detection_area_player_body_exited"]
[connection signal="timeout" from="ProjectileTimer" to="." method="_on_projectile_timer_timeout"]
[connection signal="timeout" from="Reloading" to="." method="_on_reloading_timeout"]
[connection signal="timeout" from="Direction" to="." method="_on_direction_timeout"]
